--- a/scss/module_nav/gridbox-nav-menu-overlay.scss
+++ b/scss/module_nav/gridbox-nav-menu-overlay.scss
@@ -9,11 +9,12 @@
     overflow-x: hidden;
     overflow-y: auto;
     transition: opacity 0.5s;
-    z-index: -1;
+    pointer-events: none;
+    z-index: 99;
 
     &.show {
         opacity: 1;
-        z-index: 99;
+        pointer-events: initial;
     }
 
     nav {
