--- a/scss/module_nav/gridbox-nav-menu-submenu.scss
+++ b/scss/module_nav/gridbox-nav-menu-submenu.scss
@@ -14,11 +14,11 @@
         display: block;
         position: relative;
         width: 0%;
-        height: 1px;
+        height: 2px;
         left: 50%;
         transform: translateX(-50%);
         background: $white;
-        opacity: 0.3;
+        opacity: 0.6;
         transition: width 0.3s ease-in-out;
         transition-delay: 0.2s;
     }
